5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1879.log
== TEST (2019-05-01 19:11:28) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, de falta)



-- ERROR:
File "XXXX", line 3
    print(e,"extras e", f, de falta)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:21:33) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, "de falta")




-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:44:46) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, "de falta")
h=e-(1/4*f)
if(h>400):
	print("R$ 500,00")
elif(h<=400):
	print("R$ 100,00")





-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:45:18) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, "de falta")
h=e-(1/4*f)
if(h>400):
	print("R$ 500.00")
elif(h<=400):
	print("R$ 100.00")





-- EXECUTION TIME:
0.208642
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:51:38) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, "de falta")
h=e-(1/4*f)
if(h>400):
	x=500.00
elif(h<=400):
	x=100.00
print("R$", x)





-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:52:03) 
-- CODE:
e=float(input("numero de horas extras: "))
f=float(input("numero de horas que o funcionario faltou: "))
print(e,"extras e", f, "de falta")
h=e-(1/4*f)
if(h>400):
	x=500.00
elif(h<=400):
	x=100.00
print("R$", x)





-- EXECUTION TIME:
0.245313
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
